<resources>
    <string name="app_name">NavigationArchitectureDemo</string>

    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="storage_access">Storage Access</string>
    <string name="grant_access">Grant Access</string>
    <string name="storage_permission_info_msg">Please grant us to access your storage. Which will help you to access features of app easily.</string>
    <string name="location_access">Location Access</string>
    <string name="location_permission_info_msg">Please grant us to access your current location. Which will help us to access your near by restaurants.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>


</resources>